Mon Oct 09 13:54:13 BST 2000 Olly Betts

	* IRWeight::clone() -> IRWeight::create(const OmSettings & opts)

Fri Oct  6 18:43:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added QuartzWritableDatabase, which inherits from QuartzDatabase.
	  We now open one of these instead of passing readonly=true.

Fri Oct  6 17:40:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added indexer headers to <om/om.h>

Fri Oct  6 17:19:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the new OmIndexer::get_output()

Fri Oct  6 13:15:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzBufferedTable::get_or_make_tag() now never returns a null
	  pointer, as advertised.  Fixes broken test.

Fri Oct  6 12:02:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add autoptr cleanup item to todo.

Thu Oct  5 18:28:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Renamed OmIndexer::get_output to get_raw_output and added new
	  get_output returning an OmDocumentContents (not yet implemented)

	* Removed omindexer.h~, which managed to be added to CVS

Thu Oct  5 18:24:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test of QuartzBufferedTable (fails).

Thu Oct  5 18:01:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Corrected includes of autoptr.h in quartz files.

Thu Oct  5 17:51:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made QuartzTable into a base class for QuartzDiskTable and
	  QuartzBufferedTable.

	* Made QuartzTableManager into a base class for QuartzDiskTableManager
	  and QuartzBufferedTableManager.

	* Removed QuartzModifications object.  We now use
	  QuartzBufferedTables to hold changes before committing instead. 

	* QuartzDatabase has a QuartzTableManager object, which is actually
	  a QuartzBufferedTableManager if the database is writable.