@@ -79,6 +79,8 @@ class PostList : public RefCntBase
 	 */
 	virtual om_weight get_weight() const = 0;
 
+	virtual const OmKey * get_collapse_key() const { return NULL; }
+
 	/** Get the length of the document at the current position in the
 	 *  postlist.
 	 *
