@@ -1,3 +1,11 @@
+Mon Oct 09 14:22:04 BST 2000 Olly Betts
+
+	* Added SubMatch::start_match() so we can set remote matchers going
+	  in parallel.
+
+	* Added PostList::get_collapse_key() so we don't need to refetch keys
+	  for hits from an MSetPostList.
+
 Mon Oct 09 13:54:13 BST 2000 Olly Betts
 
 	* IRWeight::clone() -> IRWeight::create(const OmSettings & opts)
